tests/paczka1/fuzzy1/31884633.err
Error in line 14: jADl2CPS8Uy S43 17,8
Error in line 15: LUdyIuUEq S459 21,1
Error in line 20: VTU S43 86,0
Error in line 22: LUdyIuUEq S43 78,4
Error in line 23: VTU S803 53,1
